Fix scroll layer choice problem on mobile

--- a/app/assets/stylesheets/small.scss
+++ b/app/assets/stylesheets/small.scss
@@ -101,7 +101,7 @@ body.small {
   &.map-layout {
     #sidebar, #map {
       position: relative;
-      overflow-x: hidden;
+      overflow-x: scroll;
       width: 100%;
       height: 50%;
     }
@@ -111,7 +111,7 @@ body.small {
         position: absolute;
         width: 300px;
         height: auto;
-        overflow: hidden;
+        overflow: scroll;
       }
 
       #map {
@@ -122,7 +122,8 @@ body.small {
     #map-ui {
       z-index: 9999;
       width: 100%;
-      overflow-y: scroll;
+      overflow: scroll !important;
+      height:50%;
     }
   }
 
@@ -142,6 +143,7 @@ body.small {
     height: 200px;
     max-height: none;
     min-height: auto;
+    overflow: scroll !important;
   }
 
   /* Rules for the login form */
@@ -169,7 +171,7 @@ body.small {
 
   .user_map {
     width: 100% !important;
-    height: 300px !important;
+    height: 100px !important;
   }
 
   #userinformation .deemphasize {
